<resources>
    <string name="app_name">Backing Track</string>
    <string name="action_add_track">Add Track</string>
    <string name="action_your_tracks">Track List</string>
    <string name="trackTitle">Insert Backing Track</string>
    <string name="track_key">Select Track Key</string>
    <string name="trackButton">Create</string>
    <string name="Electric">Electric</string>
    <string name="Acoustic">Acoustic</string>
    <string name="titlebox">TextBoxTest</string>
    <string name="amount"> </string>
    <string name="total"> </string>
    <string name="totalSoFar"> </string>
    <string name="trackListTitle">Your Track List</string>
    <string name="defaultAmount"> </string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount"> </string>
    <string name="select_profile_image">Select Profile Image</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Backing Tracks</string>
    <string name="nav_header_subtitle">youremail@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_track">Add New Track</string>
    <string name="menu_your_tracks">Your Tracks</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_welcome">Welcome</string>
    <string name="menu_all_tracks">All Tracks</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="welcome_title">Welcome to Backing Tracks</string>
    <string name="welcome_message">Backing Tracks is an app that allows you to save your favourite backing tracks.</string>
    <string name="welcome_message2">" Backing Tracks also enables you to discover more tracks that have been added by other users."</string>
    <string name="welcome_message3">"Welcome to Backing Tracks!!"</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <string name="action_edit_track_details">Edit Track Details</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Update your Track Details Below</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--END Firebase Resources-->

    <string name="google_maps_key">AIzaSyBxJ0pF3Vqc2Ckgn9XYWUrSZnzNbKpyag0</string>
    <string name="favourites_title">Favourite Donations</string>
    <string name="title">Track Details</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="Flat">b  Flat</string>
    <string name="Sharp">#  Sharp</string>
    <string name="bpmtext">BPM</string>
    <string name="key">Key</string>
    <string name="keyType">KeyType</string>
    <string name="Natural">Natural</string>
    <string name="enter_composers_name">Enter Composers Name</string>
    <string name="enter_youtube_link">Enter Youtube Link</string>

    <!--   <string name="Akey">A</string>
       <string name="b">B</string>
       <string name="c">C</string> -->


</resources>
