<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_welcome" />

        <item
            android:id="@+id/nav_add_track"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/menu_add_track" />
        <item
            android:id="@+id/nav_your_tracks"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_your_tracks" />
        <item
            android:id="@+id/nav_all_tracks"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:title="@string/menu_all_tracks" />
     <!--   <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favourites" /> -->

    </group>

  <!--  <item android:title="Communicate">
    <menu>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_send" />
    </menu>
    </item>  -->

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
