<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:background="#FFFFFF"
    android:elevation="24dp">


    <ImageView
        android:id="@+id/imageIcon"
        android:layout_width="79dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/composer"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/skranji"
        android:text="composer"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/TrackLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/TrackLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlebox"
        app:layout_constraintVertical_bias="0.333" />


    <TextView
        android:id="@+id/titlebox"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:fontFamily="@font/skranji"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        tools:text="Hello" />

    <TextView
        android:id="@+id/TrackLink"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:fontFamily="@font/skranji"
        android:text="link"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

    <TextView
        android:id="@+id/KeyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/skranji"
        android:inputType="text"
        android:text="@string/keyType"
        android:textAlignment="textStart"
        android:textColor="#B71C1C"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imagefavourite"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/instrumentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/skranji"
        android:inputType="text"
        android:text="@string/Electric"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/bpm3"
        android:layout_width="23dp"
        android:layout_height="30dp"
        android:fontFamily="@font/skranji"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bpm2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:text="0" />

    <TextView
        android:id="@+id/bpm2"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:fontFamily="@font/skranji"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bpm1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:text="0" />

    <TextView
        android:id="@+id/bpm1"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:fontFamily="@font/skranji"
        android:textAlignment="center"
        android:textColor="#B71C1C"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076"
        tools:text="0" />

    <TextView
        android:id="@+id/Key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/skranji"
        android:inputType="text"
        android:text="@string/key"
        android:textAlignment="viewEnd"
        android:textColor="#B71C1C"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <ImageView
        android:id="@+id/imagefavourite"
        android:layout_width="59dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.979"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        app:srcCompat="@android:drawable/star_big_off" />


</androidx.constraintlayout.widget.ConstraintLayout>